# podflow

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/podflow/: __init__.py  app.py  config.py  main.py  task_manager.py
src/podflow/adapters/llm/: base.py  openai_compat.py  registry.py
src/podflow/adapters/tts/: base.py  edge.py  registry.py
src/podflow/api/: settings.py  tasks.py  ws.py
src/podflow/parsers/: base.py  docx.py  epub.py  pdf.py  txt.py  url.py
src/podflow/pipeline/: runner.py  stage_parse.py  stage_script.py  stage_structure.py  stage_tts.py
src/podflow/prompts/: __init__.py  dialogue.py  lecture.py  structure.py
src/podflow/templates/: host_expert.yaml  teacher_student.yaml  two_friends.yaml
src/podflow/web/: index.html
src/podflow/web/css/: style.css
src/podflow/web/js/: app.js
tests/: test_api_settings.py  test_api_tasks.py  test_config.py  test_integration.py  test_llm_adapter.py  test_parsers.py  test_pipeline_parse.py  test_pipeline_structure.py  test_prompts.py  test_tts_adapter.py
