[project]
name = "podflow"
version = "0.1.0"
description = "Document to podcast converter with Web UI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "ebooklib>=0.18",
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
podflow = "podflow.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
]
